--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,22 @@
-<div id="instafeed"></div>
+<div class="abtme" #aboutMe>
+<h3>ABOUT ME</h3>
+<div class="featured">
+    <div class="intro">
+        Hello, I am Ayush Vyas, I am currently studying in final year of Computer Engineering from <a href="http://www.mescoepune.org/" target="_blank">Modern Education Society's College of Engineering.</a>
+        I am very enthusiastic when it comes to learning and knowing about anything related to Computer Science.  I consider myself flexible and I enjoy working on different technologies.
+    </div>
+    <p>CAREER OBJECTIVE</p>
+    <div class="desc">
+        Inspired and passionate about ever growing and evolving technologies, I look forward to make my country and the world a better place
+to live by working together with other inspired individuals to simplify human life with our collaborative set of skills.
+    </div>
+    <p>HOBBIES</p>
+    <div class="category pl">
+        <div class="skill-element">Music</div>
+        <div class="skill-element">Photo and Video Editing</div>
+        <div class="skill-element">Sound Editing</div>
+        <div class="skill-element">Sports Analysis</div>
+        <div class="skill-element">Cooking</div>
+    </div>
+</div>
+</div>
