--- a/src/app/my-projects/my-projects.component.html
+++ b/src/app/my-projects/my-projects.component.html
@@ -1,1 +1,29 @@
-<p>my-projects works!</p>
+<div class="project" #myProjects>
+<h3>MY PROJECTS</h3>
+
+<div class="featured">
+    <ul>
+        <li>
+            <p>Car Price Estimation using Machine Learning</p>
+            <img src="assets/images/carprediction.png" alt="" class="projects">
+            <div class="desc">A web application made using HTML, CSS, Bootstrap and Flask Framework
+                that estimates the prices of used cars with Machine Learning using python
+                and sci-kit learn library.</div>
+        </li>
+        <li>
+            <p>Dynamic Website Using Django Framework</p>
+            <img src="assets/images/classicnlp.png" alt="" class="projects">
+            <div class="desc">A dynamic website made using HTML, CSS, JavaScript, Bootstrap and 
+                Django Framework for endorsing Neuro Linguistic Programming and
+                its courses which is a field of applied psychology</div>
+        </li>
+        <li>
+            <p>Automobile Showcase Application with Voice Control</p>
+            <img src="assets/images/arcar.jpg" alt="" class="projects">
+            <div class="desc">A virtual showroom application for cars using Augmented Reality, Unity 3D
+                and Vuforia SDK with feature voice commands in order to manipulate
+                the augmented car.</div>
+        </li>
+    </ul>
+</div>
+</div>
