--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,20 +1,21 @@
+<div #mySkills>
 <h3 class="skill-heading">MY SKILLS</h3>
 
 <div class="featured">
     <p>FEATURED SKILLS</p>
     <div class="featured-skills">
     <div class="skill-card">
-        <img src="../../assets/flutter.png" alt="" class="skill-logo flutter">
+        <img src="assets/images/flutter.png" alt="flutter" class="skill-logo flutter">
         <div class="skill-name">Flutter</div>
         <div class="skill-desc">Flutter is Google’s UI toolkit for building beautiful, natively compiled applications for mobile, web, and desktop from a single codebase.</div>
     </div>
     <div class="skill-card">
-            <img src="../../assets/django.png" alt="" class="skill-logo django">
+            <img src="assets/images/django.png" alt="django" class="skill-logo django">
         <div class="skill-name">Django</div>
         <div class="skill-desc">Django is a high-level Python Web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of Web development, so you can focus on writing your app without needing to reinvent the wheel.</div>
     </div>
     <div class="skill-card">
-        <img src="../../assets/angular.png" alt="" class="skill-logo angular">
+        <img src="assets/images/angular.png" alt="angular" class="skill-logo angular">
         <div class="skill-name">Angular</div>
         <div class="skill-desc">Angular is a platform and framework for building single-page client applications using HTML and TypeScript. Angular is written in TypeScript. ... Components define views, which are sets of screen elements that Angular can choose among and modify according to your program logic and data.</div>
     </div>
@@ -44,10 +45,11 @@
     </div>
     <h4>OTHERS</h4>
     <div class="category others">
-        <div class="skill-element">Machine Learning</div>
+        <div class="skill-element">ML</div>
         <div class="skill-element">Django</div>
         <div class="skill-element">Flutter</div>
+        <div class="skill-element">Adobe XD</div>
     </div>
 </div>
 </div>
-
+</div>
