--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,13 +10,13 @@
     <div class="popsocials">
         <ul>
             <li>
-               <a href="" target="blank"> <img class="socialicon 1" src="../../assets/images/linkedin.png" alt=""> </a>
+               <a href="" target="blank"> <img class="socialicon 1" src="assets/images/linkedin.png" alt=""> </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/ayushvyasforreal/" target="blank"><img class="socialicon 2" src="../../assets/images/instagram.png" alt=""></a>
+                <a href="https://www.instagram.com/ayushvyasforreal/" target="blank"><img class="socialicon 2" src="assets/images/instagram.png" alt=""></a>
             </li>
             <li>
-                <a href=""><img class="socialicon 3" src="../../assets/images/twitter.png" alt=""></a>
+                <a href=""><img class="socialicon 3" src="assets/images/twitter.png" alt=""></a>
             </li>
         </ul>
         <button class="close" (click)="closeSocials()">Close</button>
